src/test/deca/context/invalid/test_class/cast_void.deca
// Description:
//    Unit Test Cast void
// Results:
//    Can't cast a void
//
// History:
//    Created on 16/01/2025


{
(void) 12;

}
